<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="default_str">default</string>
    <string name="app_name">Virgo</string>
    <string name="hello_world">Hello world!</string>
	<string name="home_page">首页</string>
	<string name="rank">排行</string>
	<string name="cartoon_circle">动漫圈</string>
	<string name="download">下载</string>
	<string name="usercenter">个人中心</string>
	<string name="more">更多</string>
	<string name="search_str">漫画名|作者</string>
	<string name="back">返回</string>
	<string name="detail">详情</string>
	<string name="add_collection">加入收藏</string>
	<string name="continue_read">继续阅读</string>
	<string name="shared">分享</string>
	<string name="deliver">投递</string>
	<string name="comment">评论</string>
	<string name="anim">动画</string>
</resources>
