<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
   <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:orientation="horizontal">
        
        <Button
            android:id="@+id/id_backbtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:drawableLeft="@drawable/backicon"
            android:gravity="center_vertical"
            android:background="@null"
            android:text="@string/back"/>
		<TextView 
		    android:id="@+id/id_title"
		    android:text="@string/default_str"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:paddingRight="15dp"
		    android:layout_weight="1"
		    android:gravity="center"/>
		<TextView 
		    android:id="@+id/id_downloadbtn"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:gravity="center_vertical"
		    android:paddingRight="5dp"
		    android:text="@string/download"/>
		
    </LinearLayout>
	
	<ScrollView 
	    android:id="@+id/id_scrollview"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:scrollbars="none">
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        
	        <FrameLayout
	            android:layout_width="match_parent"
	            android:layout_height="230dp">
	            
	            <View 
	                android:layout_width="match_parent"
	                android:layout_height="100dp"
	                android:background="#007aff"/>
	            <LinearLayout 
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:orientation="horizontal">
	                <Button 
	                    android:id="@+id/id_collectbtn"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_marginTop="20dp"
	                    android:drawableTop="@drawable/collection_icon"
	                    android:text="4.2"
	                    android:background="@null"
	                    android:gravity="center_horizontal"/>
	                <ImageView 
	                    android:id="@+id/id_img"
	                    android:layout_width="0dp"
	                    android:layout_height="wrap_content"
	                    android:paddingTop="10dp"
	                    android:layout_weight="1"
	                    android:layout_gravity="center_horizontal"
	                    android:src="@drawable/pic4"/>
	                <Button 
	                    android:id="@+id/id_levelbtn"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_marginTop="20dp"
	                    android:drawableTop="@drawable/fire_icon"
	                    android:text="B"
	                    android:background="@null"
	                    android:gravity="center_horizontal"/>
	            </LinearLayout>
	        </FrameLayout>
	        
	        <TextView 
	            android:id="@+id/id_name"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"/>
	        <TextView 
	            android:id="@+id/id_autor"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"/>
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            <Button />
	        </LinearLayout>
	    </LinearLayout>
	    
	</ScrollView>
</LinearLayout>
